# ChangeLog for games-engines/onscripter
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*onscripter-20080121 (08 Jun 2008)

  08 Jun 2008; Ryoichiro Suzuki <rspace@rspace.org>
  -onscripter-20040503_beta.ebuild, -onscripter-20050824.ebuild,
  -onscripter-20050916.ebuild, +onscripter-20080121.ebuild:
  version bump. remove old versions.
