@@ -1,5 +1,3 @@
-DIST onscripter-20051001.tar.gz 200196 RMD160 58da2089761e3d9ff33c036fa73befeb8e7dbfd6 SHA1 6af3474f22b56e848c50c7092720139e2fcef83d SHA256 23d37704a82d5bc3885fa06e5f1da123c1c84340a3d36129ccb27f855192d91e
 DIST onscripter-20080121.tar.gz 211067 RMD160 30d846f9f4b2fe8882eb3c7351bb7507e318b255 SHA1 fe3675978883b7913afb0d17e8f2bc54db24ba82 SHA256 fca0b6b54fc51490260c65503a184063e50bd1db0509bad72cea39b31760d412
-EBUILD onscripter-20051001.ebuild 2425 RMD160 c7db47fb355f20df0e7a0768c7065dc31b313f4e SHA1 9c4e558d0c0e78f275e6351beb10aa5476b46e1a SHA256 1ebb6ade8ba097075f785b203af0d52e28e8e96a5d2bf6be66dae951af4e06b9
-EBUILD onscripter-20080121.ebuild 1478 RMD160 23f655b411572cc7a3f4b9f8458871d647a152f9 SHA1 675ed8a73f2b1f34d209d15e90370e70b3c3b4fb SHA256 15bcdabfe6ee43673905b165b87836f5a99df2f08933b05f17de1b6a6b40910b
-MISC ChangeLog 376 RMD160 971050f91bd2339a77e71bfc1412ff74bfe34943 SHA1 3656668ff2c02c0b6986c445aa12fe69e4b669fd SHA256 a74a85880b4481d81a192402a2802175724113f2cb59f7888de1e9363d63e527
+EBUILD onscripter-20080121.ebuild 1423 RMD160 8f28a997638846be70f64fc69c1fea04f809a5ed SHA1 bd70c2fd2e8bedd01fcee9f09bc79826939581ab SHA256 215760b2bf8e16620df5bd0f6fc3b537dd77426ae107c4526c4a891f9dd244b2
+MISC ChangeLog 500 RMD160 8fb9620a58a78eb4d28579dd5907be8446a985bc SHA1 0279040f436c627660b70974b94de609aee5a3f5 SHA256 bed4ceb6239169b489df729f29aead159998cb55b69229a6396b9e534c9be648
